[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Mohammadreza Varasteh <varastehmr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.15.0"
hazm = "^0.7.0"
torch = "^1.10.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
